--- a/01/01. Hello World.md
+++ b/01/01. Hello World.md
@@ -1,5 +1,5 @@
 
-백준 > 입출력과 사칙연산 > 01번 Hello World    
+백준 > 입출력과 사칙연산 > 01번. Hello World    
 문제번호 [2557](https://www.acmicpc.net/problem/2557)
 
 목표
@@ -22,3 +22,8 @@ class Program
     }
 }
 ```
+
+<br>
+
+결과    
+![백준코딩 확인결과 이미지 넣자 그 몇초걸렸고 그거 ㅇㅇ]()
