--- a/01/07. (물음표물음표느낌표).md
+++ b/01/07. (물음표물음표느낌표).md
@@ -1,30 +1,38 @@
 
-백준 > 입출력과 사칙연산 > 07번 ??!    
-문제번호: [10926](https://www.acmicpc.net/problem/10926)
+백준 > 입출력과 사칙연산 > 07번. ??!    
+문제번호: [10926](https://www.acmicpc.net/problem/10926), &nbsp; 시간제한: 1초
 
 목표
->1    
->2    
+>문자열간에 +키워드를 이용해서 문자열의 덧셈을 시도할 수 있다.    
+>문자열간에 $키워드를 이용해서 문자열의 덧셈을 시도할 수 있다.    
 
 <br>
 
 작성한 코드   
 
 ```cs
-using System;
+// 준하는 사이트에 회원가입을 하다가 joonas라는 아이디가 이미 존재하는 것을 보고 놀랐다. 준하는 놀람을 ??!로 표현한다. 
+// 준하가 가입하려고 하는 사이트에 이미 존재하는 아이디가 주어졌을 때, 놀람을 표현하는 프로그램을 작성하시오.
 
-// 3
-// 4
+using System;
 
 class Program
 {
     static void Main(string[] args)
     {
-    
-    //5
+        // if문으로 중복일 경우와 아닌 경우를 나누어 처리하려고 시도했으나,
+        // 문제에서는 아이디가 이미 중복일 경우만 가정하고 있었다.
+        string input = Console.ReadLine();
+        Console.WriteLine($"{input}??!");
+        //Console.WriteLine(input+"??!"); //이 또한 위의 내용과 동일하게 정답처리된다.
 
     }
     
     
 }
 ```
+
+<br>
+
+결과    
+![백준코딩 확인결과 이미지 넣자 그 몇초걸렸고 그거 ㅇㅇ]()
