chore (add image)
10, 12, 13에 이미지 추가 (테스트)

--- a/01/10. 곱셈 (이미지대로 연출하기).md
+++ b/01/10. 곱셈 (이미지대로 연출하기).md
@@ -6,7 +6,7 @@
 >조건에 부합하는 계산식을 작성할 수 있다.     
 
 예시    
-![백준코딩 곱하기 설명 이미지 --> https://blog.naver.com/chandong83/220812226888]() 
+![백준 1_10 곱셈 예시 이미지](./image/1_10 곱셈 예시 이미지.png) 
 
 <br>
 
