--- a/01/12. 고양이 (이스케이프 시퀀스1).md
+++ b/01/12. 고양이 (이스케이프 시퀀스1).md
@@ -7,7 +7,7 @@
 >참고: [마이크로소프트 C# 가이드: 이스케이프 시퀀스](https://learn.microsoft.com/ko-kr/cpp/c-language/escape-sequences?view=msvc-170)
 
 예시    
-![백준코딩 고양이 코드 이미지 --> https://blog.naver.com/chandong83/220812226888]()
+![백준 1_12 고양이 예시 이미지](./image/1_12 고양이 예시 이미지.png)
 
 <br>
 
