--- a/01/13. 개 (이스케이프 시퀀스2).md
+++ b/01/13. 개 (이스케이프 시퀀스2).md
@@ -7,7 +7,7 @@
 >참고: [마이크로소프트 C# 가이드: 이스케이프 시퀀스](https://learn.microsoft.com/ko-kr/cpp/c-language/escape-sequences?view=msvc-170)
 
 예시    
-![백준코딩 강아지 코드 이미지 --> https://blog.naver.com/chandong83/220812226888]()
+![백준 1_13 개 예시 이미지](./image/1_13 개 예시 이미지.png)
 
 <br>
 
