Update 10. 곱셈 (이미지대로 연출하기).md

--- a/01/10. 곱셈 (이미지대로 연출하기).md
+++ b/01/10. 곱셈 (이미지대로 연출하기).md
@@ -6,7 +6,7 @@
 >조건에 부합하는 계산식을 작성할 수 있다.     
 
 예시    
-![백준 1_10 곱셈 예시 이미지](./image/1_10 곱셈 예시 이미지.png) 
+![백준 1_10 곱셈 예시 이미지](https://github.com/tjsp9830/Baekjoon/blob/main/image/1_10%20%EA%B3%B1%EC%85%88%20%EC%98%88%EC%8B%9C%20%EC%9D%B4%EB%AF%B8%EC%A7%80.png)
 
 <br>
 
