chore (Change image)
10, 12, 13에 이미지 수정 (테스트)

--- a/01/13. 개 (이스케이프 시퀀스2).md
+++ b/01/13. 개 (이스케이프 시퀀스2).md
@@ -7,7 +7,7 @@
 >참고: [마이크로소프트 C# 가이드: 이스케이프 시퀀스](https://learn.microsoft.com/ko-kr/cpp/c-language/escape-sequences?view=msvc-170)
 
 예시    
-![백준 1_13 개 예시 이미지](./image/1_13 개 예시 이미지.png)
+![백준 1_13 개 예시 이미지](https://github.com/tjsp9830/Baekjoon/blob/main/image/1_13%20%EA%B0%9C%20%EC%98%88%EC%8B%9C%20%EC%9D%B4%EB%AF%B8%EC%A7%80.png)
 
 <br>
 
