--- a/02/01. 두 수 비교하기.md
+++ b/02/01. 두 수 비교하기.md
@@ -1,16 +1,17 @@
 
-백준 > 조건문 > 01번. 두 수 비교하기    
+## 백준 > 조건문 > 01번. 두 수 비교하기    
 문제번호: [1330](https://www.acmicpc.net/problem/1330), &nbsp; 시간제한: 1초
 
-목표     
->1    
+### 목표     
+> if문과 if else문을 상황에 맞게 사용할 수 있다.    
+> 두 수를 비교할 수 있다.    
 
 <br>
 
-작성한 코드   
+### 작성한 코드   
 
 ```cs
-//  2
+// 두 정수 A와 B가 주어졌을 때, > = <  세 가지 중 하나를 출력한다.
 
 using System;
 
@@ -18,17 +19,25 @@ class Program
 {
     static void Main(string[] args)
     {        
-        // 3
-
+        string[] str = Console.ReadLine().Split();
         
+        int A = int.Parse(str[0]);
+        int B = int.Parse(str[1]);
+        
+        // 세 케이스 중 하나만을 선택해야 하므로 if, else if, else if로 작성했다.
+        if(A==B)
+            Console.Write("==");
+        else if(A>B)
+            Console.Write(">");
+        else if(A<B)
+            Console.Write("<");
 
     }
-    
     
 }
 ```
 
 <br>
 
-결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸고 그거 ㅇㅇ]()
+### 결과    
+![백준코딩 확인결과 이미지 넣자 그 몇초걸렸는지 이미지]()
