--- a/02/00. 조건문.md
+++ b/02/00. 조건문.md
@@ -1,5 +1,5 @@
 
-## 백준 > 조건문 > [목록](https://www.acmicpc.net/step/4)
+## 백준 > 조건문 > [목록 (바로가기)](https://www.acmicpc.net/step/4)
 
 ### 목표     
 > 조건문에 대해 학습한다.    
