Update 04. 사분면 고르기.md
이미지 삽입 테스트를 위해 웹에서 md파일 수정

--- a/02/04. 사분면 고르기.md
+++ b/02/04. 사분면 고르기.md
@@ -7,7 +7,7 @@
 > 제 4사분면을 나타내는 원리를 적용할 수 있는 예시를 조사해본다.
 
 ### 예시    
-![2_4 사분면고르기 예시짤](https://github.com/tjsp9830/Baekjoon/blob/main/image/2_4%20%EC%82%AC%EB%B6%84%EB%A9%B4%EA%B3%A0%EB%A5%B4%EA%B8%B0%20%EC%98%88%EC%8B%9C%EC%A7%A4.png)
+![2_4 사분면고르기 예시짤](https://github.com/tjsp9830/Baekjoon/blob/main/02/4_Image.png)
 
 <br>
 
