--- a/02/04. 사분면 고르기.md
+++ b/02/04. 사분면 고르기.md
@@ -7,8 +7,7 @@
 > 제 4사분면을 나타내는 원리를 적용할 수 있는 예시를 조사해본다.
 
 ### 예시    
-![2_4 사분면고르기 예시짤](https://github.com/tjsp9830/Baekjoon/blob/main/02/4_Image.png)
-
+![alt text](4_Image-1.png)
 <br>
 
 ### 작성한 코드   
