change img file
일부 md파일에 있던 이미지 변경,
이미지 깨짐 오류 해결

--- a/01/12. 고양이 (이스케이프 시퀀스1).md
+++ b/01/12. 고양이 (이스케이프 시퀀스1).md
@@ -7,8 +7,7 @@
 >참고: [마이크로소프트 C# 가이드: 이스케이프 시퀀스](https://learn.microsoft.com/ko-kr/cpp/c-language/escape-sequences?view=msvc-170)
 
 예시    
-![백준 1_12 고양이 예시 이미지](https://github.com/tjsp9830/Baekjoon/blob/main/image/1_12%20%EA%B3%A0%EC%96%91%EC%9D%B4%20%EC%98%88%EC%8B%9C%20%EC%9D%B4%EB%AF%B8%EC%A7%80.png)
-
+![alt text](12_Image-1.png)
 <br>
 
 작성한 코드   
