add Extend file
이진탐색트리(BST) 에 설명 추가, 이미지 추가
우선탐색 큐 (P.Q) 파일 추가
백준에서 알고리즘 파트 푼 코드 추가

--- a/Extend/01.BST.md
+++ b/Extend/01.BST.md
@@ -12,9 +12,13 @@
 <br>
 
 ### `- 구조`     
+<img src=01_BST_Img-0.png width ="500">    
+
 - 편향 이진트리 :&nbsp; 이진탐색트리가 한쪽으로만 뻗어있는 경우         
 - 포화 이진트리 :&nbsp; 모든 세대와 자식이 꽉 차있는 경우     
-- 완전 이진트리 :&nbsp; 두 경우가 아닐 경우
+- 완전 이진트리 :&nbsp; 마지막 세대의 그 이전 세대까지는 포화 상태이나, 마지막 세대는 아닌 경우. (이 또한 마지막 세대의 자식은 왼쪽부터 채워져 있어야 함) 
+- 전 이진트리 :&nbsp; 모든 세대의 자식들이 0개 혹은 2개인 경우 &nbsp; (전 이진트리는 포화 이진트리가 아니지만, 포화 이진트리는 전 이진트리이다. &nbsp; 완전 이진트리는 마지막 세대의 자식이 0, 2일 경우. 즉, 일부만 전 이진트리이다.)
+- 이진트리 :&nbsp; 위의 경우가 모두 아닐 경우
 
 <br>
 
