--- a/01/00. 입출력과 사칙연산.md
+++ b/01/00. 입출력과 사칙연산.md
@@ -1,8 +1,14 @@
 
-## 백준 > 입출력과 사칙연산 > [목록 (바로가기)](https://www.acmicpc.net/step/1)
+## 백준 > 01. 입출력과 사칙연산 > [목록 (바로가기)](https://www.acmicpc.net/step/1)
 
 ### 목표     
 > C#의 입/출력과 사칙 연산에 대해 학습한다.      
+
+<br>
+
+### 목차 
+
+![01. 입출력과 사칙연산 목차](00_result_Img.png)
 
 <br>
 
