--- a/01/04. AxB.md
+++ b/01/04. AxB.md
@@ -1,14 +1,14 @@
 
-백준 > 입출력과 사칙연산 > 04번 AxB    
-문제번호: [10998](https://www.acmicpc.net/problem/10998)
+## 백준 > 01. 입출력과 사칙연산 > 04번. AxB    
+문제번호: [10998](https://www.acmicpc.net/problem/10998), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 256MB
 
-목표
+### 목표
 >string형 변수를 배열로 입력받아 Split()함수로 구분해 사용할 수 있다.    
 >정수의 곱 계산을 할 수 있다.
 
 <br>
 
-작성한 코드   
+### 작성한 코드   
 
 ```cs
 using System;
@@ -27,13 +27,13 @@ class Program
 
         Console.Write(A * B); // A*B
 
-    }
-    
+    }    
     
 }
 ```
 
 <br>
 
-결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸고 그거 ㅇㅇ]()
+### 결과    
+
+![01단계 04번문항 제출결과](04_result_Img.png)
