--- a/01/10. 곱셈 (이미지대로 연출하기).md
+++ b/01/10. 곱셈 (이미지대로 연출하기).md
@@ -1,18 +1,19 @@
 
-백준 > 입출력과 사칙연산 > 10번. 곱셈    
-문제번호: [2588](https://www.acmicpc.net/problem/2588), &nbsp; 시간제한: 1초
+## 백준 > 01. 입출력과 사칙연산 > 10번. 곱셈    
+문제번호: [2588](https://www.acmicpc.net/problem/2588), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 128MB
 
-목표     
+### 목표     
 >조건에 부합하는 계산식을 작성할 수 있다.     
 
-예시    
-![alt text](10_Image-1.png)
+### 예시    
+![01단계 10번문항 예시이미지](10_Image_1.png)
+
 <br>
 
-작성한 코드   
+### 작성한 코드   
 
 ```cs
-// 이미지 속 곱셈의 계산순서를 연출해본다.    
+// 예시 이미지 속 곱셈의 계산순서를 연출해본다.    
 
 using System;
 
@@ -42,5 +43,5 @@ class Program
 
 <br>
 
-결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸고 그거 ㅇㅇ]()
+### 결과    
+![01단계 10번문항 제출결과](10_result_Img.png)
