--- a/01/13. 개 (이스케이프 시퀀스2).md
+++ b/01/13. 개 (이스케이프 시퀀스2).md
@@ -1,16 +1,16 @@
 
-백준 > 입출력과 사칙연산 > 13번. 개    
-문제번호: [10172](https://www.acmicpc.net/problem/10172), &nbsp; 시간제한: 1초
+## 백준 > 01. 입출력과 사칙연산 > 13번. 개    
+문제번호: [10172](https://www.acmicpc.net/problem/10172), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 256MB
 
-목표     
+### 목표     
 >이스케이프 시퀀스의 종류를 알고 활용할 수 있다.    
 >참고: [마이크로소프트 C# 가이드: 이스케이프 시퀀스](https://learn.microsoft.com/ko-kr/cpp/c-language/escape-sequences?view=msvc-170)
 
-예시    
-![alt text](13_Image-1.png)
+### 예시    
+![alt text](13_Image_1.png)
 <br>
 
-작성한 코드   
+### 작성한 코드   
 
 ```cs
 // 이미지 속 강아지 코드를 작성해본다.    
@@ -34,7 +34,7 @@ class Program
 ```
 <br>
 
-결과    
-![강아지 코드 결과 이미지 --> https://blog.naver.com/chandong83/220812226888]()
-    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸고 그거 ㅇㅇ]()
+### 결과    
+: 중간끝에 세미콜론을 깜빡해서 오류가 났다.    
+
+![01단계 13번문항 제출결과](13_result_Img.png)
