--- a/01/01. Hello World.md
+++ b/01/01. Hello World.md
@@ -1,13 +1,13 @@
 
-백준 > 입출력과 사칙연산 > 01번. Hello World    
-문제번호 [2557](https://www.acmicpc.net/problem/2557)
+## 백준 > 01. 입출력과 사칙연산 > 01번. Hello World    
+문제번호 [2557](https://www.acmicpc.net/problem/2557), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 128MB
 
-목표
+### 목표
 >string형 변수를 출력할 수 있다.
 
 <br>
 
-작성한 코드    
+### 작성한 코드    
 
 ```cs
 using System;
@@ -20,10 +20,13 @@ class Program
     {
         Console.Write("Hello World!"); //띄어쓰기, 쉼표 주의!
     }
+    
 }
 ```
 
 <br>
 
-결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸고 그거 ㅇㅇ]()
+### 결과    
+: C# 코드의 기본 구성(전처리기 지시문)을 제대로 적어주지 못해서 오답이 나왔다.
+
+![01단계 01번문항 제출결과](01_result_Img.png)
