--- a/01/03. A-B.md
+++ b/01/03. A-B.md
@@ -1,14 +1,14 @@
 
-백준 > 입출력과 사칙연산 > 03번 A-B    
-문제번호: [1001](https://www.acmicpc.net/problem/1001)
+## 백준 > 01. 입출력과 사칙연산 > 03번. A-B    
+문제번호: [1001](https://www.acmicpc.net/problem/1001), &nbsp; 시간제한: 2초, &nbsp; 메모리제한: 128MB
 
-목표
+### 목표
 >string형 변수를 배열로 입력받아 Split()함수로 구분해 사용할 수 있다.    
 >정수의 차 계산을 할 수 있다.
 
 <br>
 
-작성한 코드   
+### 작성한 코드   
 
 ```cs
 using System;
@@ -27,13 +27,14 @@ class Program
 
         Console.Write(A + B); // A-B
 
-    }
-    
+    }    
     
 }
 ```
 
 <br>
 
-결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸고 그거 ㅇㅇ]()
+### 결과    
+: 통합 개발환경(IDE, VS 이용) 없이 코딩을 시도하여, 오류가 났음에도 알아보지 못해 컴파일 에러가 났다.
+
+![01단계 03번문항 제출결과](03_result_Img.png)
