--- a/01/06. 사칙연산.md
+++ b/01/06. 사칙연산.md
@@ -1,14 +1,14 @@
 
-백준 > 입출력과 사칙연산 > 06번 사칙연산    
-문제번호: [10869](https://www.acmicpc.net/problem/10869)
+## 백준 > 01. 입출력과 사칙연산 > 06번. 사칙연산    
+문제번호: [10869](https://www.acmicpc.net/problem/10869), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 256MB
 
-목표
+### 목표
 >string형 변수를 배열로 입력받아 Split()함수로 구분해 사용할 수 있다.    
 >정수를 입력받아 사칙연산을 계산할 수 있다.
 
 <br>
 
-작성한 코드   
+### 작성한 코드   
 
 ```cs
 using System;
@@ -32,13 +32,14 @@ class Program
     Console.WriteLine(A/B); // A/B
     Console.WriteLine(A%B); // A%B 
 
-    }
-    
+    }    
     
 }
 ```
 
 <br>
 
-결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸고 그거 ㅇㅇ]()
+### 결과    
+: 문제에서는 WriteLine()을 요구했는데 Write()로 출력해버려서 줄바꿈이 되지 않아 오답이 나왔다.
+
+![01단계 06번문항 제출결과](06_result_Img.png)
