--- a/01/08. (불기연도 서기연도 변환).md
+++ b/01/08. (불기연도 서기연도 변환).md
@@ -1,14 +1,14 @@
 
-백준 > 입출력과 사칙연산 > 08번. 1998년생인 내가 태국에서는 2541년생?!    
-문제번호: [18108](https://www.acmicpc.net/problem/18108), &nbsp; 시간제한: 1초 (추가 시간 없음)
+## 백준 > 01. 입출력과 사칙연산 > 08번. 1998년생인 내가 태국에서는 2541년생?!    
+문제번호: [18108](https://www.acmicpc.net/problem/18108), &nbsp; 시간제한: 1초 (추가 시간 없음), &nbsp; 메모리제한: 1024MB
 
-목표
+### 목표
 >string으로 받은 값을 Parse(), TryParse()를 통해 다른 타입으로 변환할 수 있다.      
 >불기↔서기 연도변환, 섭씨↔화씨 온도변환 등을 연산할 수 있다.     
 
 <br>
 
-작성한 코드   
+### 작성한 코드   
 
 ```cs
 // 불기 연도를 서기 연도로 변환한 결과를 출력한다.
@@ -35,5 +35,5 @@ class Program
 
 <br>
 
-결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸고 그거 ㅇㅇ]()
+### 결과    
+![01단계 08번문항 제출결과](08_result_Img.png)
