--- a/01/09. 나머지 (사칙연산 심화).md
+++ b/01/09. 나머지 (사칙연산 심화).md
@@ -1,13 +1,13 @@
 
-백준 > 입출력과 사칙연산 > 09번. 나머지    
-문제번호: [10430](https://www.acmicpc.net/problem/10430), &nbsp; 시간제한: 1초
+## 백준 > 01. 입출력과 사칙연산 > 09번. 나머지    
+문제번호: [10430](https://www.acmicpc.net/problem/10430), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 256MB
 
-목표
+### 목표
 >사칙연산의 우선순위를 이해할 수 있다.     
 
 <br>
 
-작성한 코드   
+### 작성한 코드   
 
 ```cs
 // 첫째 줄에 (A+B)%C, 둘째 줄에 ((A%C) + (B%C))%C, 셋째 줄에 (A×B)%C, 넷째 줄에 ((A%C) × (B%C))%C를 출력한다.
@@ -64,5 +64,7 @@ class Program
 
 <br>
 
-결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸고 그거 ㅇㅇ]()
+### 결과    
+: 주석 안의 내용과, 풀어서 코딩한 내용이 전부 정답인지 궁금해서 2번 제출하였다.
+
+![01단계 09번문항 제출결과](09_result_Img.png)
