--- a/01/11. 꼬마 정민 (Overflow).md
+++ b/01/11. 꼬마 정민 (Overflow).md
@@ -1,14 +1,14 @@
 
-백준 > 입출력과 사칙연산 > 11번. 꼬마 정민    
-문제번호: [11382](https://www.acmicpc.net/problem/11382), &nbsp; 시간제한: 1초
+## 백준 > 01. 입출력과 사칙연산 > 11번. 꼬마 정민    
+문제번호: [11382](https://www.acmicpc.net/problem/11382), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 512MB
 
-목표     
+### 목표     
 >정수형 변수의 종류를 알고 알맞은 상황에 사용할 수 있다.    
 >참고: [마이크로소프트 C# 가이드: 정수 숫자 형식](https://learn.microsoft.com/ko-kr/dotnet/csharp/language-reference/builtin-types/integral-numeric-types)
 
 <br>
 
-작성한 코드   
+### 작성한 코드   
 
 ```cs
 //  A + B + C를 계산한다. 이때, A, B, C의 범위는 모두 (1 ≤ A, B, C ≤ 10^12)이다.
@@ -40,5 +40,7 @@ class Program
 
 <br>
 
-결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸고 그거 ㅇㅇ]()
+### 결과    
+: 입력되는 수의 범위를 확인하지 못해서 오답이 나왔다. 각각 long, ulong이 정답 판정인것을 확인했다.
+
+![01단계 11번문항 제출결과](11_result_Img.png)
