--- a/01/12. 고양이 (이스케이프 시퀀스1).md
+++ b/01/12. 고양이 (이스케이프 시퀀스1).md
@@ -1,16 +1,17 @@
 
-백준 > 입출력과 사칙연산 > 12번. 고양이    
-문제번호: [10171](https://www.acmicpc.net/problem/10171), &nbsp; 시간제한: 1초
+## 백준 > 01. 입출력과 사칙연산 > 12번. 고양이    
+문제번호: [10171](https://www.acmicpc.net/problem/10171), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 256MB
 
-목표     
+### 목표     
 >이스케이프 시퀀스의 종류를 알고 활용할 수 있다.    
 >참고: [마이크로소프트 C# 가이드: 이스케이프 시퀀스](https://learn.microsoft.com/ko-kr/cpp/c-language/escape-sequences?view=msvc-170)
 
-예시    
-![alt text](12_Image-1.png)
+### 예시    
+![alt text](12_Image_1.png)
+
 <br>
 
-작성한 코드   
+### 작성한 코드   
 
 ```cs
 // 이미지 속 고양이 코드를 작성해본다.    
@@ -33,7 +34,6 @@ class Program
 ```
 <br>
 
-결과    
-![고양이 코드 결과 이미지 --> https://blog.naver.com/chandong83/220812226888]()
+### 결과    
 
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸고 그거 ㅇㅇ]()
+![01단계 12번문항 제출결과](12_result_Img.png)
