change file name
파일 이름 다 영어로 바꾸고
이미지 이름도 바꿨어용

--- a/01/02. A+B.md
+++ b/01/02. A+B.md
@@ -1,5 +1,5 @@
 
-## 백준 > 01. 입출력과 사칙연산 > 02번. A+B    
+## 백준 > 01. 입출력과 사칙연산 > 02번. A+B  &nbsp;`(다국어 문제)` 
 문제번호: [1000](https://www.acmicpc.net/problem/1000), &nbsp; 시간제한: 2초, &nbsp; 메모리제한: 128MB
 
 ### 목표 
@@ -36,4 +36,4 @@ class Program
 
 ### 결과    
 
-![01단계 02번문항 제출결과](02_result_Img.png)
+![01단계 02번문항 제출결과](result_02.png)
