--- a/01/03. A-B.md
+++ b/01/03. A-B.md
@@ -37,4 +37,4 @@ class Program
 ### 결과    
 : 통합 개발환경(IDE, VS 이용) 없이 코딩을 시도하여, 오류가 났음에도 알아보지 못해 컴파일 에러가 났다.
 
-![01단계 03번문항 제출결과](03_result_Img.png)
+![01단계 03번문항 제출결과](result_03.png)
