--- a/01/05. AdevisionB.md
+++ b/01/05. AdevisionB.md
@@ -1,5 +1,5 @@
 
-## 백준 > 01. 입출력과 사칙연산 > 05번. A/B `[스페셜 저지 문제]`   
+## 백준 > 01. 입출력과 사칙연산 > 05번. A/B  &nbsp;`[스페셜 저지 문제]`   
 문제번호: [1008](https://www.acmicpc.net/problem/1008), &nbsp; 시간제한: 2초, &nbsp; 메모리제한: 128MB
 
 ### 목표
@@ -40,4 +40,4 @@ class Program
 ### 결과    
 : 정수를 실수으로 형변환하는 과정에서 float형으로 시도해 보았으나, 범위 초과로 오답이 나왔다.
 
-![01단계 05번문항 제출결과](05_result_Img.png)
+![01단계 05번문항 제출결과](result_05.png)
