--- a/01/07. QuestionMark.md
+++ b/01/07. QuestionMark.md
@@ -36,4 +36,4 @@ class Program
 ### 결과    
 : 중복여부를 판단해서 처리하려고 시도했으나, 문제는 이미 중복을 가정한 경우여서 오답이 나왔다.
 
-![01단계 07번문항 제출결과](07_result_Img.png)
+![01단계 07번문항 제출결과](result_07.png)
