--- a/01/11. LittleJungMin_Overflow.md
+++ b/01/11. LittleJungMin_Overflow.md
@@ -43,4 +43,4 @@ class Program
 ### 결과    
 : 입력되는 수의 범위를 확인하지 못해서 오답이 나왔다. 각각 long, ulong이 정답 판정인것을 확인했다.
 
-![01단계 11번문항 제출결과](11_result_Img.png)
+![01단계 11번문항 제출결과](result_11.png)
