--- a/02/00. Summary.md
+++ b/02/00. Summary.md
@@ -7,7 +7,12 @@
 
 <br>
 
-### 목차   
+### 목차 
+
+![02. 조건문](A_Summary.png)
+
+<br>  
+
 [01. 두 수 비교하기](https://github.com/tjsp9830/Baekjoon/blob/main/02/01.%20%EB%91%90%20%EC%88%98%20%EB%B9%84%EA%B5%90%ED%95%98%EA%B8%B0.md)
 <br>
 [02. 시험 성적](https://github.com/tjsp9830/Baekjoon/blob/main/02/02.%20%EC%8B%9C%ED%97%98%20%EC%84%B1%EC%A0%81.md)
