--- a/02/01. CompareNumbers.md
+++ b/02/01. CompareNumbers.md
@@ -1,6 +1,6 @@
 
-## 백준 > 조건문 > 01번. 두 수 비교하기    
-문제번호: [1330](https://www.acmicpc.net/problem/1330), &nbsp; 시간제한: 1초
+## 백준 > 02. 조건문 > 01번. 두 수 비교하기    
+문제번호: [1330](https://www.acmicpc.net/problem/1330), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 512MB
 
 ### 목표     
 > if문과 if else문을 상황에 맞게 사용할 수 있다.    
@@ -40,4 +40,5 @@ class Program
 <br>
 
 ### 결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸는지 이미지]()
+
+![02단계 01번문항 제출결과](result_01.png)
