--- a/02/02. GradingTestScores.md
+++ b/02/02. GradingTestScores.md
@@ -1,6 +1,6 @@
 
-## 백준 > 조건문 > 02번. 시험 성적    
-문제번호: [9498](https://www.acmicpc.net/problem/9498), &nbsp; 시간제한: 1초
+## 백준 > 02. 조건문 > 02번. 시험 성적    
+문제번호: [9498](https://www.acmicpc.net/problem/9498), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 128MB
 
 ### 목표     
 > if문과 if else문을 상황에 맞게 사용할 수 있다.    
@@ -44,4 +44,5 @@ class Program
 <br>
 
 ### 결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸는지 이미지]()
+
+![02단계 02번문항 제출결과](result_02.png)
