--- a/02/03. LeapYear.md
+++ b/02/03. LeapYear.md
@@ -1,6 +1,6 @@
 
-## 백준 > 조건문 > 03번. 윤년    
-문제번호: [2753](https://www.acmicpc.net/problem/2753), &nbsp; 시간제한: 1초
+## 백준 > 03. 조건문 > 03번. 윤년    
+문제번호: [2753](https://www.acmicpc.net/problem/2753), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 128MB
 
 ### 목표     
 > if문과 if else문을 상황에 맞게 사용할 수 있다.    
@@ -50,4 +50,6 @@ class Program
 <br>
 
 ### 결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸는지 이미지]()
+: 문제에서 요구한 내용을 한번에 이해하지 못해서 제출을 여러번 시도하였다.
+
+![02단계 03번문항 제출결과](result_03.png)
