--- a/02/04. PickAQuadrant.md
+++ b/02/04. PickAQuadrant.md
@@ -1,13 +1,13 @@
 
-## 백준 > 조건문 > 04번. 사분면 고르기   
-문제번호: [14681](https://www.acmicpc.net/problem/14681), &nbsp; 시간제한: 1초
+## 백준 > 02. 조건문 > 04번. 사분면 고르기  &nbsp;`(다국어 문제)`   
+문제번호: [14681](https://www.acmicpc.net/problem/14681), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 512MB
 
 ### 목표     
 > if문과 if else문을 상황에 맞게 사용할 수 있다.    
 > 제 4사분면을 나타내는 원리를 적용할 수 있는 예시를 조사해본다.
 
 ### 예시    
-![alt text](4_Image-1.png)
+![02단계 04문항 예시이미지](Example_Image_04.png)
 <br>
 
 ### 작성한 코드   
@@ -46,4 +46,5 @@ class Program
 <br>
 
 ### 결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸는지 이미지]()
+
+![02단계 04번문항 제출결과](result_04.png)
