--- a/02/05. SetTheAlarmTimer.md
+++ b/02/05. SetTheAlarmTimer.md
@@ -1,6 +1,6 @@
 
-## 백준 > 조건문 > 05번. 알람 시계    
-문제번호: [2884](https://www.acmicpc.net/problem/2884), &nbsp; 시간제한: 1초
+## 백준 > 02. 조건문 > 05번. 알람 시계  &nbsp;`(다국어 문제)`    
+문제번호: [2884](https://www.acmicpc.net/problem/2884), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 128MB
 
 ### 목표     
 > if문과 if else문, if문과 또 다른 if문을 상황에 맞게 사용할 수 있다.    
@@ -58,4 +58,6 @@ class Program
 <br>
 
 ### 결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸는지 이미지]()
+: 시각의 예외처리에서 논리에 오류가 있어 오답이 나왔다.
+
+![02단계 05번문항 제출결과](result_05.png)
