--- a/02/07. Roll3Dice.md
+++ b/02/07. Roll3Dice.md
@@ -1,6 +1,6 @@
 
-## 백준 > 조건문 > 07번. 주사위 세개    
-문제번호: [2480](https://www.acmicpc.net/problem/2480), &nbsp; 시간제한: 1초
+## 백준 > 02. 조건문 > 07번. 주사위 세개    
+문제번호: [2480](https://www.acmicpc.net/problem/2480), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 128MB
 
 ### 목표     
 > if문과 if else문, if문과 또 다른 if문을 상황에 맞게 사용할 수 있다.    
@@ -84,4 +84,6 @@ class Program
 <br>
 
 ### 결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸는지 이미지]()
+: 코드를 지저분하지 않고 간단하게 구현하고 싶어서 많이 시도 해보았으나 오답이 나왔다.
+
+![02단계 07번문항 제출결과](result_07.png)
