--- a/01/12. CAT_EscapeSequence.md
+++ b/01/12. CAT_EscapeSequence.md
@@ -1,5 +1,5 @@
 
-## 백준 > 01. 입출력과 사칙연산 > 12번. 고양이    
+## 백준 > 01. 입출력과 사칙연산 > 12번. 고양이  &nbsp;`(다국어 문제)`  
 문제번호: [10171](https://www.acmicpc.net/problem/10171), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 256MB
 
 ### 목표     
@@ -7,7 +7,7 @@
 >참고: [마이크로소프트 C# 가이드: 이스케이프 시퀀스](https://learn.microsoft.com/ko-kr/cpp/c-language/escape-sequences?view=msvc-170)
 
 ### 예시    
-![alt text](12_Image_1.png)
+![alt text](Example_Image_12.png)
 
 <br>
 
@@ -36,4 +36,4 @@ class Program
 
 ### 결과    
 
-![01단계 12번문항 제출결과](12_result_Img.png)
+![01단계 12번문항 제출결과](result_12.png)
