--- a/01/13. DOG_EscapeSequence.md
+++ b/01/13. DOG_EscapeSequence.md
@@ -1,5 +1,5 @@
 
-## 백준 > 01. 입출력과 사칙연산 > 13번. 개    
+## 백준 > 01. 입출력과 사칙연산 > 13번. 개  &nbsp;`(다국어 문제)`  
 문제번호: [10172](https://www.acmicpc.net/problem/10172), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 256MB
 
 ### 목표     
@@ -7,7 +7,7 @@
 >참고: [마이크로소프트 C# 가이드: 이스케이프 시퀀스](https://learn.microsoft.com/ko-kr/cpp/c-language/escape-sequences?view=msvc-170)
 
 ### 예시    
-![alt text](13_Image_1.png)
+![alt text](Example_Image_13.png)
 <br>
 
 ### 작성한 코드   
@@ -37,4 +37,4 @@ class Program
 ### 결과    
 : 중간끝에 세미콜론을 깜빡해서 오류가 났다.    
 
-![01단계 13번문항 제출결과](13_result_Img.png)
+![01단계 13번문항 제출결과](result_13.png)
