--- a/02/06. SetTheOvenTimer.md
+++ b/02/06. SetTheOvenTimer.md
@@ -1,6 +1,6 @@
 
-## 백준 > 조건문 > 06번. 오븐 시계    
-문제번호: [2525](https://www.acmicpc.net/problem/2525), &nbsp; 시간제한: 1초
+## 백준 > 02. 조건문 > 06번. 오븐 시계    
+문제번호: [2525](https://www.acmicpc.net/problem/2525), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 128MB
 
 ### 목표     
 > if문과 if else문, if문과 또 다른 if문을 상황에 맞게 사용할 수 있다.    
@@ -55,4 +55,6 @@ class Program
 <br>
 
 ### 결과    
-![백준코딩 확인결과 이미지 넣자 그 몇초걸렸는지 이미지]()
+: 논리에 맞게 구현하는데에 시행착오가 있어 오답이 나왔다.
+
+![02단계 06번문항 제출결과](result_06.png)
