--- a/03/01. TimesTable.md
+++ b/03/01. TimesTable.md
@@ -3,14 +3,15 @@
 문제번호: [2739](https://www.acmicpc.net/problem/2739), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 128MB
 
 ### 목표     
-> // 1    
+> for문을 이용해 구구단을 출력할 수 있다.    
 
 <br>
 
 ### 작성한 코드   
 
 ```cs
-// 2
+// N을 입력받은 뒤, 구구단 N단을 출력하는 프로그램을 작성하시오.
+// 첫째 줄에 N이 주어진다. N은 1보다 크거나 같고, 9보다 작거나 같다.
 
 using System;
 
@@ -18,7 +19,12 @@ class Program
 {
     static void Main(string[] args)
     {        
-        // 3
+        int num = int.Parse(Console.ReadLine());
+        
+        for(int i=1; i<=9; i++)
+        {
+            Console.WriteLine($"{num} * {i} = {num*i}");
+        }
 
     }
     
