--- a/03/08. A+BVersion8.md
+++ b/03/08. A+BVersion8.md
@@ -3,14 +3,15 @@
 문제번호: [11022](https://www.acmicpc.net/problem/11022), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 256MB
 
 ### 목표     
-> // 1    
+> 문제에 맞는 반복문, 사칙연산, 입출력을 수행한다.    
 
 <br>
 
 ### 작성한 코드   
 
 ```cs
-// 2
+// 첫째 줄에 테스트 케이스의 개수 T, 다음 줄부터 한 줄로 A와 B가 주어진다.
+// 각 줄마다 "Case #x: A + B = C"를 출력한다. 테스트 케이스 번호는 1부터 시작한다.
 
 using System;
 
@@ -18,7 +19,16 @@ class Program
 {
     static void Main(string[] args)
     {        
-        // 3
+        int testCase = int.Parse(Console.ReadLine());
+
+        for(int i=0; i<testCase; i++)
+        {
+            string[] str = Console.ReadLine().Split();
+            int A = int.Parse(str[0]);
+            int B = int.Parse(str[1]);
+
+            Console.WriteLine($"Case #{i+1}: {A} + {B} = {A+B}");
+        }
 
     }
     
@@ -29,4 +39,4 @@ class Program
 
 ### 결과    
 
-![03단계 08번문항 제출결과](result_08.png)
+![03단계 08번문항 제출결과](00/result_08.png)
