--- a/03/03. Bout.md
+++ b/03/03. Bout.md
@@ -48,4 +48,4 @@ class Program
 ### 결과    
 : 문제에서 의도한 대로 for문을 사용해도 되지만, if else문을 이용해도 문제를 해결할 수 있었다.
 
-![03단계 03번문항 제출결과](result_03.png)
+![03단계 03번문항 제출결과](00/result_03.png)
