--- a/03/05. CodingIsNogada.md
+++ b/03/05. CodingIsNogada.md
@@ -44,4 +44,4 @@ class Program
 ### 결과    
 : 주석 안의 내용(25번째 줄)처럼 입력할 경우, 나누기 연산이 실행이 가미되어 비교적 느렸다.
 
-![03단계 05번문항 제출결과](result_05.png)
+![03단계 05번문항 제출결과](00/result_05.png)
