--- a/03/10. PrintStars2.md
+++ b/03/10. PrintStars2.md
@@ -3,14 +3,16 @@
 문제번호: [2439](https://www.acmicpc.net/problem/2439), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 128MB
 
 ### 목표     
-> // 1    
+> 이중 for문을 이용해 여러가지 별찍기를 구현해본다.        
 
 <br>
 
 ### 작성한 코드   
 
 ```cs
-// 2
+// 이전 문제의 좌우반전 형태를 출력하는 문제
+// 첫째 줄에 주어진 N(1 ≤ N ≤ 100)의 갯수만큼 첫째 줄부터 N번째 줄까지 차례대로 별을 출력한다.
+
 
 using System;
 
@@ -18,7 +20,21 @@ class Program
 {
     static void Main(string[] args)
     {        
-        // 3
+        int testCase = int.Parse(Console.ReadLine());
+
+        for (int i = 1; i <= testCase; i++)
+        {
+            for (int k = 0; k < testCase - i; k++)
+            {
+                Console.Write(" ");
+            }
+            for (int j = 0; j < i; j++)
+            {
+                Console.Write("*");
+            }
+
+            Console.WriteLine("");
+        }
 
     }
     
@@ -29,4 +45,4 @@ class Program
 
 ### 결과    
 
-![03단계 10번문항 제출결과](result_10.png)
+![03단계 10번문항 제출결과](00/result_10.png)
