--- a/03/11. A+BVersion5.md
+++ b/03/11. A+BVersion5.md
@@ -3,14 +3,14 @@
 문제번호: [10952](https://www.acmicpc.net/problem/10952), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 256MB
 
 ### 목표     
-> // 1    
+> for문과 while문 중 적절한 반복문을 선택해서 사용할 수 있다.    
 
 <br>
 
 ### 작성한 코드   
 
 ```cs
-// 2
+// 입력으로 0 0이 들어오기 전까지 끊임없이 정수 A와 B를 입력받아 합을 출력한다.
 
 using System;
 
@@ -18,7 +18,17 @@ class Program
 {
     static void Main(string[] args)
     {        
-        // 3
+        while (true)
+        {
+            string[] str = Console.ReadLine().Split();
+            int A = int.Parse(str[0]);
+            int B = int.Parse(str[1]);
+
+            if (A == 0 && B == 0)
+                break;
+            else
+                Console.WriteLine($"{A + B}");
+        }
 
     }
     
@@ -29,4 +39,4 @@ class Program
 
 ### 결과    
 
-![03단계 11번문항 제출결과](result_11.png)
+![03단계 11번문항 제출결과](00/result_11.png)
