chore: Modified file path
이미지 파일 따로 폴더링하고 본문에 경로 변경했습니다.

--- a/01/01. HelloWorld.md
+++ b/01/01. HelloWorld.md
@@ -29,4 +29,4 @@ class Program
 ### 결과    
 : C# 코드의 기본 구성(전처리기 지시문)을 제대로 적어주지 못해서 오답이 나왔다.
 
-![01단계 01번문항 제출결과](result_01.png)
+![01단계 01번문항 제출결과](00/result_01.png)
