--- a/01/05. AdevisionB.md
+++ b/01/05. AdevisionB.md
@@ -40,4 +40,4 @@ class Program
 ### 결과    
 : 정수를 실수으로 형변환하는 과정에서 float형으로 시도해 보았으나, 범위 초과로 오답이 나왔다.
 
-![01단계 05번문항 제출결과](result_05.png)
+![01단계 05번문항 제출결과](00/result_05.png)
