--- a/01/06. ElementaryArithmetic.md
+++ b/01/06. ElementaryArithmetic.md
@@ -42,4 +42,4 @@ class Program
 ### 결과    
 : 문제에서는 WriteLine()을 요구했는데 Write()로 출력해버려서 줄바꿈이 되지 않아 오답이 나왔다.
 
-![01단계 06번문항 제출결과](result_06.png)
+![01단계 06번문항 제출결과](00/result_06.png)
