--- a/01/09. ElementaryArithmetic2.md
+++ b/01/09. ElementaryArithmetic2.md
@@ -67,4 +67,4 @@ class Program
 ### 결과    
 : 주석 안의 내용과, 풀어서 코딩한 내용이 전부 정답인지 궁금해서 2번 제출하였다.
 
-![01단계 09번문항 제출결과](result_09.png)
+![01단계 09번문항 제출결과](00/result_09.png)
