--- a/01/12. CAT_EscapeSequence.md
+++ b/01/12. CAT_EscapeSequence.md
@@ -7,7 +7,7 @@
 >참고: [마이크로소프트 C# 가이드: 이스케이프 시퀀스](https://learn.microsoft.com/ko-kr/cpp/c-language/escape-sequences?view=msvc-170)
 
 ### 예시    
-![alt text](Example_Image_12.png)
+![alt text](00/Example_Image_12.png)
 
 <br>
 
@@ -36,4 +36,4 @@ class Program
 
 ### 결과    
 
-![01단계 12번문항 제출결과](result_12.png)
+![01단계 12번문항 제출결과](00/result_12.png)
