--- a/01/13. DOG_EscapeSequence.md
+++ b/01/13. DOG_EscapeSequence.md
@@ -7,7 +7,7 @@
 >참고: [마이크로소프트 C# 가이드: 이스케이프 시퀀스](https://learn.microsoft.com/ko-kr/cpp/c-language/escape-sequences?view=msvc-170)
 
 ### 예시    
-![alt text](Example_Image_13.png)
+![alt text](00/Example_Image_13.png)
 <br>
 
 ### 작성한 코드   
@@ -35,6 +35,6 @@ class Program
 <br>
 
 ### 결과    
-: 중간끝에 세미콜론을 깜빡해서 오류가 났다.    
+: 코드 중간에 세미콜론을 깜빡해서 오류가 났다.    
 
-![01단계 13번문항 제출결과](result_13.png)
+![01단계 13번문항 제출결과](00/result_13.png)
