--- a/02/03. LeapYear.md
+++ b/02/03. LeapYear.md
@@ -52,4 +52,4 @@ class Program
 ### 결과    
 : 문제에서 요구한 내용을 한번에 이해하지 못해서 제출을 여러번 시도하였다.
 
-![02단계 03번문항 제출결과](result_03.png)
+![02단계 03번문항 제출결과](00/result_03.png)
