--- a/02/04. PickAQuadrant.md
+++ b/02/04. PickAQuadrant.md
@@ -7,7 +7,7 @@
 > 제 4사분면을 나타내는 원리를 적용할 수 있는 예시를 조사해본다.
 
 ### 예시    
-![02단계 04문항 예시이미지](Example_Image_04.png)
+![02단계 04문항 예시이미지](00/Example_Image_04.png)
 <br>
 
 ### 작성한 코드   
@@ -47,4 +47,4 @@ class Program
 
 ### 결과    
 
-![02단계 04번문항 제출결과](result_04.png)
+![02단계 04번문항 제출결과](00/result_04.png)
