--- a/02/05. SetTheAlarmTimer.md
+++ b/02/05. SetTheAlarmTimer.md
@@ -60,4 +60,4 @@ class Program
 ### 결과    
 : 시각의 예외처리에서 논리에 오류가 있어 오답이 나왔다.
 
-![02단계 05번문항 제출결과](result_05.png)
+![02단계 05번문항 제출결과](00/result_05.png)
