--- a/02/06. SetTheOvenTimer.md
+++ b/02/06. SetTheOvenTimer.md
@@ -57,4 +57,4 @@ class Program
 ### 결과    
 : 논리에 맞게 구현하는데에 시행착오가 있어 오답이 나왔다.
 
-![02단계 06번문항 제출결과](result_06.png)
+![02단계 06번문항 제출결과](00/result_06.png)
