--- a/02/07. Roll3Dice.md
+++ b/02/07. Roll3Dice.md
@@ -86,4 +86,4 @@ class Program
 ### 결과    
 : 코드를 지저분하지 않고 간단하게 구현하고 싶어서 많이 시도 해보았으나 오답이 나왔다.
 
-![02단계 07번문항 제출결과](result_07.png)
+![02단계 07번문항 제출결과](00/result_07.png)
