--- a/01/10. Multiplication.md
+++ b/01/10. Multiplication.md
@@ -6,7 +6,7 @@
 >조건에 부합하는 계산식을 작성할 수 있다.     
 
 ### 예시    
-![01단계 10번문항 예시이미지](Example_Image_10.png)
+![01단계 10번문항 예시이미지](00/Example_Image_10.png)
 
 <br>
 
@@ -44,4 +44,4 @@ class Program
 <br>
 
 ### 결과    
-![01단계 10번문항 제출결과](result_10.png)
+![01단계 10번문항 제출결과](00/result_10.png)
