[Add] 04 md file
04단계 반복문을 풀었습니다. (8/10)

--- a/04/01. CountingNumbers.md
+++ b/04/01. CountingNumbers.md
@@ -3,17 +3,15 @@
 문제번호: [10807](https://www.acmicpc.net/problem/10807), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 256MB
 
 ### 목표     
-> 1    
-
-### 예시
-![04단계 01번문항 예시 이미지](00/Example_Image_01.png)
+> 배열을 선언하여 문제의 요구대로 코드를 작성할 수 있다.    
 
 <br>
 
 ### 작성한 코드   
 
 ```cs
-// 2
+// 총 N개의 정수가 주어졌을 때, 정수 v가 몇 개인지 구하는 프로그램을 작성하시오.
+// 첫째 줄에 정수의 개수 N, 둘째 줄에는 공백으로 구분된 정수들, 셋째 줄에는 찾으려고 하는 정수 v.
 
 using System;
 
@@ -21,7 +19,30 @@ class Program
 {
     static void Main(string[] args)
     {        
-        // 3
+        // 첫째줄 입력받기
+        int N = int.Parse(Console.ReadLine());
+
+        // 둘째줄 입력받기
+        string[] str = Console.ReadLine().Split();
+
+        int[] arr = new int[N];
+
+        for(int i=0; i<N; i++)
+        {
+            arr[i] = int.Parse(str[i]);
+        }
+
+        // 셋째줄 입력받기
+        int V = int.Parse(Console.ReadLine());
+        int count = 0;
+
+        for(int j=0; j< N; j++)
+        {
+            if (arr[j] == V)
+                count += 1;
+        }
+
+        Console.WriteLine(count);
 
     }
     
