--- a/04/03. MinimumMaximum.md
+++ b/04/03. MinimumMaximum.md
@@ -3,17 +3,15 @@
 문제번호: [10818](https://www.acmicpc.net/problem/10818), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 256MB
 
 ### 목표     
-> 1    
-
-### 예시
-![03단계 03번문항 예시 이미지](00/Example_Image_03.png)
+> 배열에 제공되는 기능을 찾아보고 적절하게 사용해본다.   
 
 <br>
 
 ### 작성한 코드   
 
 ```cs
-// 2
+// 첫째 줄에 N개의 정수가 주어진다. 둘째 줄에는 N개의 정수가 공백으로 구분되어 주어진다.
+// 이때, 최솟값과 최댓값을 구하는 프로그램을 작성하시오.
 
 using System;
 
@@ -21,7 +19,37 @@ class Program
 {
     static void Main(string[] args)
     {        
-        // 3
+        int input = int.Parse(Console.ReadLine());
+        string[] stArr = Console.ReadLine().Split();
+
+
+        int[] numArr = new int[input];
+
+        for(int i=0; i<input; i++)
+        {
+            numArr[i] = int.Parse(stArr[i]);
+        }
+
+        // 1) Array.Sort() 기능 이용하기
+        //Array.Sort(numArr);
+        // 1) 출력
+        //Console.WriteLine($"{numArr[0]} {numArr[input-1]}");
+
+        // 2) 값을 직접 비교하기
+        int max = -1000000;
+        int min = 1000000;
+
+        for (int i = 0; i < input; i++)
+        {
+            if (numArr[i] > max)
+                max = numArr[i];
+            
+            if (numArr[i] < min)
+                min = numArr[i];
+        }
+
+        // 2) 출력
+        Console.WriteLine($"{min} {max}");
 
     }
     
@@ -31,5 +59,6 @@ class Program
 <br>
 
 ### 결과    
+: 조건문의 수식을 작성하는데 최소값의 범위를 착각하여 오답이 나왔다. 이후 Array.Sort()기능을 사용해서도 해결하였다.
 
-![03단계 03번문항 제출결과](00/result_03.png)
+![04단계 03번문항 제출결과](00/result_03.png)
