--- a/04/04. MaximumValue.md
+++ b/04/04. MaximumValue.md
@@ -1,19 +1,17 @@
 
 ## 백준 > 04. 1차원 배열 > 04번. 최댓값    
-문제번호: [2562](https://www.acmicpc.net/problem/2562), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 1024MB
+문제번호: [2562](https://www.acmicpc.net/problem/2562), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 128MB
 
 ### 목표     
-> 1    
-
-### 예시
-![03단계 04번문항 예시 이미지](00/Example_Image_04.png)
+> 배열의 인덱스의 특성을 이해할 수 있다.    
 
 <br>
 
 ### 작성한 코드   
 
 ```cs
-// 2
+// 첫째 줄부터 아홉 번째 줄까지 한 줄에 서로 다른 하나의 자연수가 주어진다.
+// 9개의 서로 다른 자연수 중 최댓값을 찾고 그 최댓값이 몇 번째 수인지를 구하는 프로그램을 작성하시오.
 
 using System;
 
@@ -21,7 +19,26 @@ class Program
 {
     static void Main(string[] args)
     {        
-        // 3
+        int[] numArr = new int[9];
+        int max = 0; // 범위가 100보다 작은 자연수이므로, (1 <= 범위 <= 99) 0으로 초기화
+        int count = -1; //인덱스는 음수가 불가하므로 -1로 초기화
+
+        for (int i = 0; i < 9; i++)
+        {
+            int input = int.Parse(Console.ReadLine());
+            numArr[i] = input;
+
+            if (numArr[i] > max) 
+            {
+                max = numArr[i];
+                count = i+1; //배열의 인덱스는 0부터 시작하므로 1을 더해줌
+            }
+
+        }
+
+        Console.WriteLine(max);
+        Console.WriteLine(count);
+
 
     }
     
@@ -32,4 +49,4 @@ class Program
 
 ### 결과    
 
-![03단계 04번문항 제출결과](00/result_04.png)
+![04단계 04번문항 제출결과](00/result_04.png)
