--- a/04/06. ChangeTheBALL.md
+++ b/04/06. ChangeTheBALL.md
@@ -1,19 +1,22 @@
 
 ## 백준 > 04. 1차원 배열 > 06번. 공 바꾸기    
-문제번호: [10813](https://www.acmicpc.net/problem/10813), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 512MB
+문제번호: [10813](https://www.acmicpc.net/problem/10813), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 256MB
 
 ### 목표     
-> 1    
-
-### 예시
-![03단계 06번문항 예시 이미지](00/Example_Image_06.png)
+> 문제에서 의도하는 점을 잘 이해하고 코드를 작성할 수 있다.    
+> 배열의 구현 의도에 따라서 for문과 foreach문을 적절히 선택하여 사용할 수 있다.    
 
 <br>
 
 ### 작성한 코드   
 
 ```cs
-// 2
+// 첫째 줄에 N (1 ≤ N ≤ 100)과 M (1 ≤ M ≤ 100)이 주어진다.
+// 둘째 줄부터 M개의 줄에 걸쳐서 공을 교환할 방법이 주어진다.
+// 공을 어떻게 바꿀지가 주어졌을 때, M번 공을 바꾼 이후에 각 바구니에 어떤 공이 들어있는지 구하는 프로그램을 작성하시오.
+
+// 각 방법은 두 정수 i j로 이루어져 있으며, i번 바구니와 j번 바구니에 들어있는 공을 교환한다는 뜻이다. (1 ≤ i ≤ j ≤ N)
+// 도현이는 입력으로 주어진 순서대로 공을 교환한다.
 
 using System;
 
@@ -21,7 +24,39 @@ class Program
 {
     static void Main(string[] args)
     {        
-        // 3
+        //도현이가 바구니 N개에 공을 M번 던진다
+        string[] input = Console.ReadLine().Split();
+
+        int N = int.Parse(input[0]);
+        int M = int.Parse(input[1]);
+
+        int[] nArr = new int[N];
+
+        // 인덱스 0부터 값을 인덱스+1로 초기화
+        for (int nIndex = 0; nIndex < N; nIndex++)
+        {
+            nArr[nIndex] = nIndex + 1;
+        }
+
+        // 값 교환하기
+        for(int nTry=0; nTry<M; nTry++)
+        { 
+            input = Console.ReadLine().Split();
+
+            int i = int.Parse(input[0]) - 1;
+            int j = int.Parse(input[1]) - 1;
+
+            int nTemp = nArr[i];
+            nArr[i] = nArr[j];
+            nArr[j] = nTemp;                
+
+        }
+
+        // 출력
+        foreach(int i in nArr)
+        {
+            Console.Write($"{i} ");
+        }
 
     }
     
@@ -32,4 +67,4 @@ class Program
 
 ### 결과    
 
-![03단계 06번문항 제출결과](00/result_06.png)
+![04단계 06번문항 제출결과](00/result_06.png)
