--- a/04/07. WhosThatDontSubmit.md
+++ b/04/07. WhosThatDontSubmit.md
@@ -3,17 +3,17 @@
 문제번호: [5597](https://www.acmicpc.net/problem/5597), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 128MB
 
 ### 목표     
-> 1    
-
-### 예시
-![03단계 07번문항 예시 이미지](00/Example_Image_07.png)
+> 기본적으로 int배열의 값은 0으로 초기화 된다는점을 이용할 수 있다.    
+> 
 
 <br>
 
 ### 작성한 코드   
 
 ```cs
-// 2
+// X대학 M교수님의 강의 수강생 30명 중 특별과제를 내지 않은 두 학생의 출석번호를 출력해라.
+// 입력은 총 28줄로, 각 학생의 출석번호가 한 줄에 하나씩 주어진다. (이때, 출석번호에 중복은 없다.)
+// 출력은 2줄로. 첫째 줄엔 미제출 학생의 출석번호 중 가장 작은 것을, 다음줄엔 나머지 출석번호를 출력한다.
 
 using System;
 
@@ -21,8 +21,69 @@ class Program
 {
     static void Main(string[] args)
     {        
-        // 3
+        #region  초기 작성 코드
 
+        //수강생은 30명
+        int index = 30;
+        int[] nArr = new int[index];
+        const int SUBMIT = -99; //제출자의 출석번호에 상수 -99을 대입함
+
+        //제출한 학생 28명의 인덱스(출석번호-1)에 상수를 대입
+        for (int i=0; i< index-2; i++)
+        {
+            int input = int.Parse(Console.ReadLine()) - 1;
+
+            nArr[input] = SUBMIT;
+        }
+
+        //제출못한 두 학생은 누굴까
+        int A = 0;
+        int B = 0;
+                    
+        // for문으로 배열의 인덱스 0부터 Length까지 돌려서 
+        for(int j=0; j< index; j++)
+        {
+            // 상수가 아닌 인덱스를 찾아 (인덱스+1)값을 넣어줌(출석번호)
+            if (nArr[j] != SUBMIT) 
+            {
+                // A가 비었다면 A에, 아니라면 B에 넣기
+                if (A == 0)
+                    A = j + 1;
+                else
+                    B = j + 1;
+            }
+        }
+
+        //그 중에서 출석번호 앞 사람부터 부르기 (삼항연산자 이용)
+        int min = A<B ? A : B;
+        int max = A>B ? A : B;
+        Console.WriteLine(min);
+        Console.WriteLine(max);
+
+        #endregion 초기 작성 코드
+
+//----------------------------------------------------------
+        #region 숏코딩 참고 후 작성한 코드
+
+        int[] nArr = new int[30];
+
+        for (int i=0; i< 28; i++)
+        {
+            int input = int.Parse(Console.ReadLine());
+
+            nArr[input-1] = 1; //값에 해당하는 인덱스에만 1을 초기화하면, 나머지는 0으로 남아있게 된다.
+        }
+
+        //foreach는 특정 인덱스만을 짚을 수 없어서 for문을 이용
+        for(int j=0; j< 30; j++)
+        {
+            if (nArr[j] == 0)
+                Console.WriteLine(j+1); 
+                //인덱스를 0부터 Length까지 순회할 시, 자동으로 작은 값부터 값에 담기게 된다.(함정)
+        }
+
+        #endregion 숏코딩 참고 후 작성한 코드
+    
     }
     
 }
@@ -31,5 +92,6 @@ class Program
 <br>
 
 ### 결과    
+: 다른 학생들의 숏코드를 참조한 뒤, 코드를 단축해서 작성해 보았다.
 
-![03단계 07번문항 제출결과](00/result_07.png)
+![04단계 07번문항 제출결과](00/result_07.png)
