--- a/04/08. Remainder.md
+++ b/04/08. Remainder.md
@@ -3,25 +3,51 @@
 문제번호: [3052](https://www.acmicpc.net/problem/3052), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 128MB
 
 ### 목표     
-> 1    
-
-### 예시
-![03단계 08번문항 예시 이미지](00/Example_Image_08.png)
+> 정수형 배열만이 아닌, 다른 데이터형의 배열도 사용할 수 있다.         
+> 배열의 특성을 이용하여 여러 데이터형의 배열을 서로 조합해서 사용할 수 있다.         
 
 <br>
 
 ### 작성한 코드   
 
 ```cs
-// 2
+// 첫째 줄부터 열번째 줄 까지 숫자가 한 줄에 하나씩 주어진다.
+// 이 수를 각각 42로 나눈 나머지를 구해서, 나머지의 종류가 몇가지인지 출력하시오.
 
 using System;
 
 class Program
 {
     static void Main(string[] args)
-    {        
-        // 3
+    {   
+        // 주어진 숫자를 42로 나눈 나머지를 담을 정수형 배열     
+        int[] nArr = new int[10];
+        // 카운트 세아릴 변수
+        int count = 0;
+
+        // **42의 나머지로 나올 수 있는 0~41을 담을 boolean형 배열**
+        bool[] isinclude = new bool[42];
+       
+
+        for (int i = 0; i < 10; i++)
+        {
+            // 첫번째 배열에 입력값의 나머지를 초기화 (내 힘으로는 여기까지만이 가능했다..)
+            nArr[i] = int.Parse(Console.ReadLine()) % 42;
+
+            // **나머지로 나온 숫자 번째의 인덱스의 bool변수를 true로 바꿔줌**
+            isinclude[nArr[i]] = true;
+
+        }
+
+        // **bool배열을 순회해서 값이 true일때만 카운트 증가**
+        for (int j = 0; j < isinclude.Length; j++)
+        {
+            if (isinclude[j]/*==true*/)
+                count += 1;
+        }
+
+        // 출력
+        Console.WriteLine(count);
 
     }
     
@@ -31,5 +57,7 @@ class Program
 <br>
 
 ### 결과    
+: 처음엔 int형 배열을 두개 놓고, 이중 for문으로 순회해서 count를 증가시키려 했지만 오류가 발생했다.     
+: 결국 인터넷 검색을 통해서 힘들게 해결했다.. 생각지도 못해본 bool배열을 이용한다는 점이 참신하고 충격적이었다.
 
-![03단계 08번문항 제출결과](00/result_08.png)
+![04단계 08번문항 제출결과](00/result_08.png)
