[chore] fix md file
04_09의 목표에 설명이 빠져서 채웠습니다.

--- a/04/09. BasketFlip.md
+++ b/04/09. BasketFlip.md
@@ -3,7 +3,7 @@
 문제번호: [10811](https://www.acmicpc.net/problem/10811), &nbsp; 시간제한: 1초, &nbsp; 메모리제한: 256MB
 
 ### 목표     
-> 1    
+> 구현이 복잡한 경우에는 의사코드를 먼저 구현해본다.    
 
 ### 예시
 ![04단계 09번문항 예시 이미지](00/Example_Image_09.png)
